<resources>
    <string name="app_name">Budget Manager Meerim</string>
    <string name="budget_manager">Budget Manager</string>

    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Bag</string>
    <string name="title_notifications">Wishlist</string>
    <string name="select_size">Select size</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="_0_gbp">0 GBP</string>
    <string name="promo_code">Promo Code</string>
    <string name="pearl_bag">Pearl Bag</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="enter_your_details_and_start_nshopping">Enter your details and start\nshopping!</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="wishlist">WishList</string>
    <string name="search">Search</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="financial_goals">Financial Goals</string>
    <string name="reports">Reports</string>
    <string name="articles">Articles</string>
    <string name="title_activity_article">ArticleActivity</string>
</resources>